test/templateOutput.yaml
{
  "Resources": {
    "DatabaseVPCB5B6076B": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet1Subnet63B0CC5B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet1"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet1RouteTable513D440F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet1"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet1RouteTableAssociation3847AFA4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPublicSubnet1RouteTable513D440F"
        },
        "SubnetId": {
          "Ref": "DatabaseVPCPublicSubnet1Subnet63B0CC5B"
        }
      }
    },
    "DatabaseVPCPublicSubnet1DefaultRoute4ABC1B4C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPublicSubnet1RouteTable513D440F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "DatabaseVPCIGW5EBED972"
        }
      },
      "DependsOn": [
        "DatabaseVPCVPCGWE97DB90B"
      ]
    },
    "DatabaseVPCPublicSubnet1EIP5EE19F1D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet1"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet1NATGateway021FE2F8": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "DatabaseVPCPublicSubnet1Subnet63B0CC5B"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "DatabaseVPCPublicSubnet1EIP5EE19F1D",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "DatabaseVPCPublicSubnet1DefaultRoute4ABC1B4C",
        "DatabaseVPCPublicSubnet1RouteTableAssociation3847AFA4"
      ]
    },
    "DatabaseVPCPublicSubnet2Subnet4AF96223": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet2"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet2RouteTable8BE59444": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet2"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet2RouteTableAssociation5CC21E01": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPublicSubnet2RouteTable8BE59444"
        },
        "SubnetId": {
          "Ref": "DatabaseVPCPublicSubnet2Subnet4AF96223"
        }
      }
    },
    "DatabaseVPCPublicSubnet2DefaultRoute2350CAD3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPublicSubnet2RouteTable8BE59444"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "DatabaseVPCIGW5EBED972"
        }
      },
      "DependsOn": [
        "DatabaseVPCVPCGWE97DB90B"
      ]
    },
    "DatabaseVPCPublicSubnet2EIP0BF26106": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet2"
          }
        ]
      }
    },
    "DatabaseVPCPublicSubnet2NATGateway8F7C67AA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "DatabaseVPCPublicSubnet2Subnet4AF96223"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "DatabaseVPCPublicSubnet2EIP0BF26106",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PublicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "DatabaseVPCPublicSubnet2DefaultRoute2350CAD3",
        "DatabaseVPCPublicSubnet2RouteTableAssociation5CC21E01"
      ]
    },
    "DatabaseVPCPrivateSubnet1Subnet6D37235E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PrivateSubnet1"
          }
        ]
      }
    },
    "DatabaseVPCPrivateSubnet1RouteTableD179C781": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PrivateSubnet1"
          }
        ]
      }
    },
    "DatabaseVPCPrivateSubnet1RouteTableAssociation72418BC3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPrivateSubnet1RouteTableD179C781"
        },
        "SubnetId": {
          "Ref": "DatabaseVPCPrivateSubnet1Subnet6D37235E"
        }
      }
    },
    "DatabaseVPCPrivateSubnet1DefaultRoute88967E87": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPrivateSubnet1RouteTableD179C781"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "DatabaseVPCPublicSubnet1NATGateway021FE2F8"
        }
      }
    },
    "DatabaseVPCPrivateSubnet2Subnet2E9A415D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PrivateSubnet2"
          }
        ]
      }
    },
    "DatabaseVPCPrivateSubnet2RouteTable58014196": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC/PrivateSubnet2"
          }
        ]
      }
    },
    "DatabaseVPCPrivateSubnet2RouteTableAssociationF5911BB1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPrivateSubnet2RouteTable58014196"
        },
        "SubnetId": {
          "Ref": "DatabaseVPCPrivateSubnet2Subnet2E9A415D"
        }
      }
    },
    "DatabaseVPCPrivateSubnet2DefaultRouteBC089DF8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DatabaseVPCPrivateSubnet2RouteTable58014196"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "DatabaseVPCPublicSubnet2NATGateway8F7C67AA"
        }
      }
    },
    "DatabaseVPCIGW5EBED972": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestDatabaseStack/DatabaseVPC"
          }
        ]
      }
    },
    "DatabaseVPCVPCGWE97DB90B": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        },
        "InternetGatewayId": {
          "Ref": "DatabaseVPCIGW5EBED972"
        }
      }
    },
    "DatabaseSecurityGroup7319C0F6": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "TestDatabaseStack/DatabaseSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "DatabaseVPCB5B6076B"
        }
      }
    },
    "DatabaseSecret86DBB7B3": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "password",
          "IncludeSpace": false,
          "SecretStringTemplate": "{\"username\":\"admin\"}"
        },
        "Name": "database-credentials"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "DbClusterSubnets8FA1749C": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnets for DbCluster database",
        "SubnetIds": [
          {
            "Ref": "DatabaseVPCPrivateSubnet1Subnet6D37235E"
          },
          {
            "Ref": "DatabaseVPCPrivateSubnet2Subnet2E9A415D"
          }
        ]
      }
    },
    "DbClusterSecret9A4B0D5E": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"postgres\"}"
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "DbClusterSecretAttachment4201A1ED": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "DbClusterSecret9A4B0D5E"
        },
        "TargetId": {
          "Ref": "DbCluster224236EF"
        },
        "TargetType": "AWS::RDS::DBCluster"
      }
    },
    "DbCluster224236EF": {
      "Type": "AWS::RDS::DBCluster",
      "Properties": {
        "Engine": "aurora-postgresql",
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-postgresql13",
        "DBSubnetGroupName": {
          "Ref": "DbClusterSubnets8FA1749C"
        },
        "EngineVersion": "13.6",
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbClusterSecret9A4B0D5E"
              },
              ":SecretString:username::}}"
            ]
          ]
        },
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbClusterSecret9A4B0D5E"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "Port": 5432,
        "ServerlessV2ScalingConfiguration": {
          "MaxCapacity": 1,
          "MinCapacity": 0.5
        },
        "VpcSecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "DatabaseSecurityGroup7319C0F6",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Snapshot",
      "DeletionPolicy": "Snapshot"
    },
    "DbClusterInstance155835CE5": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AutoMinorVersionUpgrade": true,
        "DBClusterIdentifier": {
          "Ref": "DbCluster224236EF"
        },
        "DBInstanceClass": "db.serverless",
        "DBSubnetGroupName": {
          "Ref": "DbClusterSubnets8FA1749C"
        },
        "Engine": "aurora-postgresql",
        "PubliclyAccessible": true
      },
      "DependsOn": [
        "DatabaseVPCPrivateSubnet1DefaultRoute88967E87",
        "DatabaseVPCPrivateSubnet1RouteTableAssociation72418BC3",
        "DatabaseVPCPrivateSubnet2DefaultRouteBC089DF8",
        "DatabaseVPCPrivateSubnet2RouteTableAssociationF5911BB1"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
